--- a/package.json
+++ b/package.json
@@ -2,5 +2,14 @@
   "dependencies": {
     "express": "^4.2.0",
     "express3-handlebars": "^0.5.0"
+  },
+  "devDependencies": {
+    "chai": "^1.9.1",
+    "grunt": "^0.4.5",
+    "grunt-cafe-mocha": "^0.1.12",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-exec": "^0.4.5",
+    "mocha": "^1.19.0",
+    "zombie": "^2.0.0-alpha31"
   }
 }
